# yast-kdump

./: .gitignore  .rubocop.yml  .travis.yml  MAINTAINER  README.md  RPMNAME  Rakefile  yast2-kdump.spec.in
.github/workflows/: ci.yml
agents/: Makefile.am
config/: Makefile.am  kdump.rnc
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-kdump.changes  yast2-kdump.spec
src/: Kdump.ycp  Makefile.am  complex.ycp  dialogs.ycp  helps.ycp  kdump.desktop  kdump.ycp  kdump_auto.ycp  kdump_finish.ycp  kdump_proposal.ycp  uifunctions.ycp  wizards.ycp
src/autoyast-rnc/: kdump.rnc
src/clients/: kdump.rb  kdump.ycp  kdump_auto.rb  kdump_auto.ycp  kdump_finish.rb  kdump_finish.ycp  kdump_proposal.rb  kdump_proposal.ycp
src/desktop/: kdump.desktop  org.opensuse.yast.Kdump.desktop
src/include/kdump/: complex.rb  dialogs.rb  helps.rb  helps.ycp  uifunctions.rb  wizards.rb
src/lib/kdump/: kdump_calibrator.rb  kdump_system.rb
src/lib/kdump/clients/: auto.rb  finish.rb  kdump.rb
src/modules/: Kdump.rb  Kdump.ycp
src/scrconf/: cfg_kdump.scr
test/: Makefile.am  auto_test.rb  client_test.rb  fadump_test.rb  finish_test.rb  kdump_test.rb  test_helper.rb
test/include/: uifunctions.rb
test/lib/: kdump_calibrator_test.rb  kdump_system_test.rb
test/lib/kdump/: kdump_calibrator_test.rb  kdump_system_test.rb
test/lib/kdump/clients/: kdump_test.rb
test/systems/dom0/sys/hypervisor/properties/: features
test/systems/domU/sys/hypervisor/properties/: features
testsuite/tests/: Kdump.out  Kdump.rb  Kdump.ycp
